* 1.2.4
	* New features:
		- More compatible with CSS specification(2015-11-13)
		- Support malformed HTML(2015-11-13)
	* Bug fixes:
		- Fix ITable first call of beginRefresh() UI not working on iOS 9.0(2015-11-12)
		- Fix "background: url(a.png)" image not showing on iOS 7.0.3(2015-11-11)
		- Fix addClass() bug, now addClass/removeClass work in the right way(2015-11-10)
	* Incompatible changes:
		- Remove IStyleUtil(2015-11-14)
		- More compatible with CSS specification(2015-11-13)
		- Treats unknown tags more friendly(2015-11-13)
* 1.2.3
	* Bug fixes:
		- Fix memory leak(2015-10-22)
* 1.2.2
	* New features:
		- Support cascading CSS selectors(2015-08-17)
		- Rewrite ITable datasource manipulating methods(2015-09-18)
* 1.2.1
	* New features:
		- Use two round layout for valign(2015-07-31)
* 1.2.0
	* New features:
		- IStyle add setClass() method(2015-07-31)
		- Fix Ilabel auto width issue when it is in small area(2015-07-21)
		- IView supports background image(2015-07-17)
		- IButton supports IEventHighlight|IEventUnhighlight(2015-07-17)
		- Support css file import in XML(2015-07-07)
	* Bug fixes: